Add Note about model sizes

--- a/MIRNet_TFJS.ipynb
+++ b/MIRNet_TFJS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MIRNet_TFJS.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPNYDBLk8cg5s10VQ5udU2n",
+      "authorship_tag": "ABX9TyMeW+fgCGdDA9xYVibPEI0Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -645,6 +645,105 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uNyDDILsPT9m"
+      },
+      "source": [
+        "## Comparing Model sizes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZBuBsdhTPJLf"
+      },
+      "source": [
+        "model_type = \"no-comp\" #@param [\"no-comp\", \"float-16\", \"uint-16\", \"uint-8\"]\n",
+        "\n",
+        "def get_size(start_path):\n",
+        "    total_size = 0\n",
+        "    for dirpath, dirnames, filenames in os.walk(start_path):\n",
+        "        for f in filenames:\n",
+        "            fp = os.path.join(dirpath, f)\n",
+        "            # skip if it is symbolic link\n",
+        "            if not os.path.islink(fp):\n",
+        "                total_size += os.path.getsize(fp)\n",
+        "\n",
+        "    return total_size"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ed8X6NDnQ-2e",
+        "outputId": "78feb50e-ea2a-42e5-f9cc-3ef72b5ed055"
+      },
+      "source": [
+        "def model_size(model_dir):\r\n",
+        "    size = get_size(model_dir)\r\n",
+        "    print('Model size is %f MBs.' % (size / 1024.0 / 1024.0))\r\n",
+        "\r\n",
+        "model_size(\"tfjs/\" + model_type)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model size is 139.255836 MBs.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GMYtB4gWRovJ"
+      },
+      "source": [
+        "As an example you can see here that the `float-16` model is almost half the size of the original model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t8ucl95LRJ79",
+        "outputId": "2d3b8b49-9bc0-43e9-a0d6-0f0b549b0651"
+      },
+      "source": [
+        "model_size(\"tfjs/float-16\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model size is 69.984879 MBs.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pCo3AaVTR_gQ"
+      },
+      "source": [
+        "And that is all for this notebook where we first dwonlaoded the model we built earlier, converted the model to TFJS format and finally compared model sizes for different compression techniques."
       ]
     }
   ]
